[gd_scene load_steps=13 format=2]

[ext_resource path="res://rooms/level 1/starter.tscn" type="PackedScene" id=1]
[ext_resource path="res://rooms/level 1/Room2.tscn" type="PackedScene" id=2]
[ext_resource path="res://rooms/level 1/Room4.tscn" type="PackedScene" id=3]
[ext_resource path="res://rooms/level 1/Room1.tscn" type="PackedScene" id=4]
[ext_resource path="res://rooms/level 1/FinalRoom.tscn" type="PackedScene" id=5]
[ext_resource path="res://rooms/level 1/Room3.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level/Level1/Level1.gd" type="Script" id=8]
[ext_resource path="res://ui/main menu/pause.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sound/suaraLangkah.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 32 )

[node name="Level1" type="Node2D"]
script = ExtResource( 8 )

[node name="Starter" parent="." instance=ExtResource( 1 )]

[node name="Enter" type="Area2D" parent="Starter"]
position = Vector2( 32, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Starter/Enter"]
shape = SubResource( 1 )

[node name="Enter2" type="Area2D" parent="Starter"]
position = Vector2( 32, 304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Starter/Enter2"]
shape = SubResource( 1 )

[node name="Enter3" type="Area2D" parent="Starter"]
position = Vector2( -208, 128 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Starter/Enter3"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Starter"]
position = Vector2( 240, 128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Starter/Area2D"]
shape = SubResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 4 )]
position = Vector2( 448, 0 )

[node name="Start" type="Area2D" parent="TileMap"]
position = Vector2( 160, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Start"]
shape = SubResource( 1 )

[node name="Next" type="Area2D" parent="TileMap"]
position = Vector2( 32, 304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Next"]
shape = SubResource( 1 )

[node name="Prev" type="Area2D" parent="TileMap"]
position = Vector2( -176, 128 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Prev"]
shape = SubResource( 1 )

[node name="TileMap2" parent="." instance=ExtResource( 2 )]
position = Vector2( 448, 352 )
tile_data = PoolIntArray( -1, 0, 0, -65534, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 131066, 0, 0, 65543, 0, 0, 196591, 0, 0, 196602, 0, 0, 131079, 0, 0, 262138, 0, 0, 196615, 0, 0, 327674, 0, 0, 262151, 0, 0, 262152, 0, 0, 393210, 0, 0, 458746, 0, 0, 524282, 0, 0, 524283, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 589819, 0, 0, 589820, 0, 0, 524293, 0, 0, 524294, 0, 0, 655356, 0, 0, 655357, 0, 0, 589828, 0, 0, 589829, 0, 0, 720893, 0, 0, 720894, 0, 0, 655363, 0, 0, 655364, 0, 0, 786430, 0, 0, 786431, 0, 0, 720898, 0, 0, 720899, 0, 0, 851967, 0, 0, 786434, 0, 0 )

[node name="Prev" type="Area2D" parent="TileMap2"]
position = Vector2( 32, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap2/Prev"]
shape = SubResource( 1 )

[node name="Next" type="Area2D" parent="TileMap2"]
position = Vector2( 32, 400 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap2/Next"]
shape = SubResource( 1 )

[node name="Start" type="Area2D" parent="TileMap2"]
position = Vector2( 272, 192 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap2/Start"]
shape = SubResource( 1 )

[node name="TileMap3" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 864 )

[node name="Prev" type="Area2D" parent="TileMap3"]
position = Vector2( -32, -80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap3/Prev"]
shape = SubResource( 1 )

[node name="Next" type="Area2D" parent="TileMap3"]
position = Vector2( -144, 160 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap3/Next"]
shape = SubResource( 1 )

[node name="Start" type="Area2D" parent="TileMap3"]
position = Vector2( 80, 160 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap3/Start"]
shape = SubResource( 1 )

[node name="TileMap4" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 960 )

[node name="Start" type="Area2D" parent="TileMap4"]
position = Vector2( 96, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap4/Start"]
shape = SubResource( 1 )

[node name="Start2" type="Area2D" parent="TileMap4"]
position = Vector2( -16, 64 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap4/Start2"]
shape = SubResource( 1 )

[node name="Next" type="Area2D" parent="TileMap4"]
position = Vector2( 96, 176 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap4/Next"]
shape = SubResource( 1 )

[node name="Prev" type="Area2D" parent="TileMap4"]
position = Vector2( 208, 64 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap4/Prev"]
shape = SubResource( 1 )

[node name="TileMap5" parent="." instance=ExtResource( 5 )]
position = Vector2( 480, 1216 )
tile_data = PoolIntArray( -65546, 0, 0, -65543, 0, 0, -10, 0, 65536, -7, 0, 0, -65535, 0, 0, -65532, 0, 0, 65526, 0, 0, 65529, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 131062, 0, 0, 131065, 0, 0, 65543, 0, 0, 196598, 0, 0, 196601, 0, 0, 131079, 0, 0, 262134, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196615, 0, 0, 327670, 0, 0, 262151, 0, 0, 393206, 0, 0, 327687, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 655361, 0, 0, 655364, 0, 0 )

[node name="Start" type="Area2D" parent="TileMap5"]
position = Vector2( 96, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap5/Start"]
shape = SubResource( 1 )

[node name="Start2" type="Area2D" parent="TileMap5"]
position = Vector2( 96, 368 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap5/Start2"]
shape = SubResource( 1 )

[node name="YouWin" type="Area2D" parent="TileMap5"]
position = Vector2( -80, 256 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap5/YouWin"]
shape = SubResource( 1 )

[node name="Start4" type="Area2D" parent="TileMap5"]
position = Vector2( -80, 64 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap5/Start4"]
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 32, 128 )
scale = Vector2( 0.5, 0.5 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -3.8147e-06, -1.52588e-05 )
scale = Vector2( 0.4, 0.4 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Player/CanvasLayer"]
margin_left = -400.0
margin_top = -224.0
margin_right = 1120.0
margin_bottom = 1728.0
color = Color( 0, 0, 0, 1 )

[node name="Pause" parent="Player" instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Starter/Enter" to="." method="_on_Enter_body_entered"]
[connection signal="body_entered" from="Starter/Enter2" to="." method="_on_Enter2_body_entered"]
[connection signal="body_entered" from="Starter/Enter3" to="." method="_on_Enter3_body_entered"]
[connection signal="body_entered" from="Starter/Area2D" to="." method="_on_Area2D_body_enteredStart"]
[connection signal="body_entered" from="TileMap/Start" to="." method="_on_Start_body_enteredR1"]
[connection signal="body_entered" from="TileMap/Next" to="." method="_on_Next_body_enteredR1"]
[connection signal="body_entered" from="TileMap/Prev" to="." method="_on_Prev_body_enteredR1"]
[connection signal="body_entered" from="TileMap2/Prev" to="." method="_on_Prev_body_enteredR2"]
[connection signal="body_entered" from="TileMap2/Next" to="." method="_on_Next_body_enteredR2"]
[connection signal="body_entered" from="TileMap2/Start" to="." method="_on_Start_body_enteredR2"]
[connection signal="body_entered" from="TileMap3/Prev" to="." method="_on_Prev_body_enteredR3"]
[connection signal="body_entered" from="TileMap3/Next" to="." method="_on_Next_body_enteredR3"]
[connection signal="body_entered" from="TileMap3/Start" to="." method="_on_Start_body_enteredR3"]
[connection signal="body_entered" from="TileMap4/Start" to="." method="_on_Start_body_enteredR4"]
[connection signal="body_entered" from="TileMap4/Start2" to="." method="_on_Start2_body_enteredR4"]
[connection signal="body_entered" from="TileMap4/Next" to="." method="_on_Next_body_enteredR4"]
[connection signal="body_entered" from="TileMap4/Prev" to="." method="_on_Prev_body_enteredR4"]
[connection signal="body_entered" from="TileMap5/Start" to="." method="_on_Start_body_enteredR4"]
[connection signal="body_entered" from="TileMap5/Start2" to="." method="_on_Start_body_enteredR4"]
[connection signal="body_entered" from="TileMap5/YouWin" to="." method="_on_Start_body_enteredR4"]
[connection signal="body_entered" from="TileMap5/Start4" to="." method="_on_Start_body_enteredR4"]
